k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgrest-service
  namespace: postgrest
spec:
  selector:
    app: postgrest
  ports:
    - port: 3000
      targetPort: 3000
